# bouquineur

./: Cargo.toml  README.md  flake.nix
migrations/2024-08-02-150055_books/: down.sql  up.sql
migrations/2024-08-07-175104_series/: down.sql  up.sql
migrations/2024-08-15-073727_status/: down.sql  up.sql
migrations/2024-08-16-151406_wishlist/: down.sql  up.sql
migrations/2024-08-16-154708_case/: down.sql  up.sql
migrations/2024-09-23-160922_series_info/: down.sql  up.sql
migrations/2024-12-03-184123_public_ongoing/: down.sql  up.sql
src/: main.rs  metadata.rs  models.rs  schema.rs
src/metadata/: calibre.rs  mod.rs  openlibrary.rs
src/routes/: add.rs  barcode.js  components.rs  edit.rs  edit_series.rs  get_author.rs  get_book.rs  get_series.rs  icons.rs  mod.rs  ongoing.rs  profile.rs  unread.rs
tests/: hp.opf
