[package]
name = "bouquineur"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "query"] }
base64 = "0.22.1"
bstr = "1.10.0"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
image = "0.25.2"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = { version = "0.12.5", default-features = false, features = [
	"rustls-tls-native-roots",
] }
roxmltree = { version = "0.20.0", default-features = false, features = ["std"] }
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.11.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
expect-test = "1.5.0"
